// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`draw_data returns first argument if exactly one argument: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "draw_data(1);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [
    Array [
      1,
    ],
  ],
}
`;

exports[`draw_data returns first argument if more than one argument: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "draw_data(1, 2);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [
    Array [
      1,
      2,
    ],
  ],
}
`;

exports[`draw_data with no arguments throws error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "draw_data();",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Expected 1 or more arguments, but got 0.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
